--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@+id/firstLayout">
+        android:layout_below="@+id/firstLayout"
+        android:id="@+id/linearLayout">
 
         <Button
             android:id="@+id/btn_iniciar_sesion"
@@ -79,6 +80,15 @@
             android:background="@drawable/degradado_btn"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
     </LinearLayout>
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/loginFacebook_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="90dp"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentEnd="true" />
 
     <ProgressBar
         android:id="@+id/progressBarLogin"
