--- a/app/src/main/res/layout/fragment_clima_dialog.xml
+++ b/app/src/main/res/layout/fragment_clima_dialog.xml
@@ -60,6 +60,23 @@
             android:layout_marginTop="12dp"
              />
 
+        <TextView
+            android:id="@+id/txtCoord"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/txtTemp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="11dp"/>
+
+        <ProgressBar
+            android:id="@+id/progressBarClima"
+            style="?android:attr/progressDrawable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:visibility="gone"/>
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
