--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -39,22 +39,23 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout
+        android:id="@+id/fabtoolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fabtoolbar"
-        app:showDuration="600"
+
+        app:containerId="@+id/fabtoolbar_container"
+        app:fabId="@+id/fab"
+        app:fabToolbarId="@+id/fabtoolbar_toolbar"
+        app:fadeInFraction="0.2"
         app:hideDuration="200"
         app:horizontalMargin="30dp"
-        app:verticalMargin="30dp"
-        app:fadeInFraction="0.2"
-        app:fabId="@+id/fab"
-        app:containerId="@+id/fabtoolbar_container"
-        app:fabToolbarId="@+id/fabtoolbar_toolbar">
+        app:showDuration="600"
+        app:verticalMargin="30dp">
 
         <RelativeLayout
+            android:id="@+id/fabtoolbar_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/fabtoolbar_container">
+            android:layout_height="wrap_content">
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab"
@@ -63,15 +64,17 @@
                 android:layout_gravity="end|bottom"
                 app:fabSize="normal"
                 app:srcCompat="@android:drawable/btn_star" />
+
+
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/fabtoolbar_toolbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/fabtoolbar_toolbar"
-            android:orientation="horizontal"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgYoutube"
@@ -95,17 +98,24 @@
                 app:srcCompat="@drawable/phone_icon" />
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+
+
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="180dp"
+            android:layout_height="120dp"
+            android:layout_marginEnd="31dp"
+            android:clickable="true"
+            android:visibility="gone"
             android:layout_above="@+id/fabtoolbar_toolbar"
             android:layout_alignParentEnd="true"
-            android:id="@+id/fragment_container"
-            android:visibility="visible">
+            android:layout_marginBottom="60dp" />
 
-        </RelativeLayout>
 
 
     </com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout>
+
+
+
 
 </android.support.design.widget.CoordinatorLayout>
